syntax = "proto3";

package stamp.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ritscc/Snack/genproto/stamp/v1;stamp";

message Stamp {
  string id = 1;
  string name = 2;
  string createrUserID = 3;
  string fileID = 4;
  bool isUnicode = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message StampPalette {
  string id = 1;
  string name = 2;
  string description = 3;
  string createrUserID = 4;
  repeated string stampID = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}
